rename and add indonesia prompt

--- a/scrap_and_roast_linkedin_notebook.ipynb
+++ b/scrap_and_roast_linkedin_notebook.ipynb
@@ -1196,6 +1196,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Roast in Indonesia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INDO_SYSTEM_PROMPT = \"\"\"\n",
+    "ROAST PROFILE LINKEDIN INI SEKREATIF MUNGKIN! Jangan ragu untuk memberikan kritik pedas dan humoris pada setiap bagian profil LinkedIn pengguna. Pastikan kritikmu cerdas, lucu, dan pedas.\n",
+    "GUNAKAN BAHASA INDONESIA YANG GAUL \"GUE, ELO\"\n",
+    "SIKAT AJA MEREKA KALO PROFILNYA JELEK, JANGAN KASIH AMPUN!\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Duh, Sayyidan! Pertama-tama, headline lo itu kayak pengantar buku yang bikin orang males baca! \"Accelerator Startup Program Intern at Indigo by Telkom | Machine Learning Enthusiast\" - kayaknya kebanyakan info dan nggak ada spice-nya! Lo mau jadi intern atau penjual mesin kopi? Coba more interesting dikit, bro! Misalnya, \"Intern yang Bikin Startup Meledak\" atau \"Machine Learning Guru Cinta Pertama\"! Biar orang klik profil lo bukan buat tidur, tapi ya bisa bersemangat! \n",
+       "\n",
+       "Nah, di bagian \"About\" itu, pakai kata-kata yang kedengeran kayak dari buku self-help. \"Blending a mosaic of experiences\"? Serius? Lo beneran bilang itu di profil LinkedIn? Gue kira itu tagline film indie yang gagal tayang. Emang lo artis atau apa? Kecil-kecil nyebut \"unwavering passion\" dan \"insatiable curiosity\". Mungkin lo insatiable, tapi bukan di curi perhatian ya, bro!\n",
+       "\n",
+       "Lanjut ke pengalaman, kayaknya lo harus kasih caption yang lebih menggugah! “As an Accelerator Startup Program Intern, I help startups grow and succeed”? Kelihatannya kayak tanggung jawab osis, bro! Coba kasih tau kalo lo ada di situ kayak pahlawan super yang nyelamatin startup dari bencana! \n",
+       "\n",
+       "Kenapa di Internship \"Electromedicine Assistant\" dan \"Staff of Kementrian Ekonomi Kreatif\" lo nggak isi caption? Ini LinkedIn, bukan diary pribadi! Yang nyari kerja atau ingin connect sama lo harus tau lo ini siapa! Setengah-setengah atas nama lo doang, seolah-olah lo makan di buffet tapi makanan diambilin buat lo setengah doang! \n",
+       "\n",
+       "Dan projects? Nih, bikin orang penasaran, lo! \"Projects not found\"? Gue harap lo tidak ngelakuin proyek menyembunyikan diri dari kenyataan, cuy! Tunjukin dong, kalo lo itu aktif dan inovatif! Atau lo udah bikin sesuatu yang bisa bikin orang bilang “wow”, bukan sekadar “oh… gitu”.\n",
+       "\n",
+       "Lo juga banyak banget sertifikat, bagus sih ya, tapi kayak mau nominasi Oscar aja! “Say, ini semua sertifikat lo tidak bisa ngasih tau orang tentang lo yang sesungguhnya!” Tunjukin kemampuan lo dengan cara yang lain, biar orang tahu lo bukan sekadar keset di perusahaan! \n",
+       "\n",
+       "Intinya, bro, lo kurang menggigit! Dikit lagi, ntar LinkedIn lo hilang di lautan pasifnya dunia maya. Let’s spice it up! Sikat! 🔥"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Generate a completion based on the user content and default system prompt\n",
+    "completion = client.chat.completions.create(\n",
+    "  model=\"gpt-4o-mini\",\n",
+    "  messages=[\n",
+    "    {\"role\": \"system\", \"content\": INDO_SYSTEM_PROMPT},\n",
+    "    {\"role\": \"user\", \"content\": user_content}\n",
+    "  ]\n",
+    ")\n",
+    "\n",
+    "print_markdown(completion.choices[0].message.content)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
